--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Simple Auto Parts Store project with Spring Boot and Security</description>
 
     <properties>
-        <java.version>11</java.version> <!-- Или 17 -->
+        <java.version>17</java.version> <!-- Или 17 -->
         <springsecurity.version>5.7.5</springsecurity.version>
         <thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
         <thymeleaf-layout-dialect.version>2.5.3</thymeleaf-layout-dialect.version>
@@ -24,6 +24,14 @@
 
     <dependencies>
         <!-- Spring Boot Starter Web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-java8time</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
